add change src on html code

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-    <script>
-        // Your JavaScript code remains the same as in your original code
+    <script src="index.js">
+        
     </script>
 </body>
 
