add math game board

--- a/index.html
+++ b/index.html
@@ -14,18 +14,27 @@
 
 <body>
     <div id="game-board">
-        <!-- Game categories and point values will be displayed here -->
+    <div id="game-board">
+        <div class="category">
+            <h3>Math</h3>
+            <ul>
+                <li><button data-points="100">100</button></li>
+                <li><button data-points="200">200</button></li>
+                <li><button data-points="250">300</button></li>
+                <li><button data-points="300">300</button></li>
+            </ul>
+        </div>
     </div>
     <div id="question-container">
         <!-- This container is for displaying the question and answer choices -->
         <div id="question">
-            Question: 2 + 3
+            Question: What is the result of 5 + 7?
         </div>
         <div id="answer-choices">
-            <button>Option 1: 5</button>
-            <button>Option 2: 7</button>
-            <button>Option 3: 4</button>
-            <button>Option 4: 8</button>
+            <button>Option 1: 12</button>
+            <button>Option 2: 9</button>
+            <button>Option 3: 8</button>
+            <button>Option 4: 14</button>
         </div>
     </div>
     <div id="timer-container">
@@ -44,7 +53,7 @@
     </div>
 
     <script src="index.js">
-        
+
     </script>
 </body>
 
