add question and answer

--- a/index.html
+++ b/index.html
@@ -25,18 +25,30 @@
             </ul>
         </div>
     </div>
-    <div id="question-container">
-        <!-- This container is for displaying the question and answer choices -->
-        <div id="question">
-            Question: What is the result of 5 + 7?
+    <div id="question-container1">
+        <div id="question1">
+            Question: What is 8 multiplied by 6?
         </div>
-        <div id="answer-choices">
-            <button>Option 1: 12</button>
-            <button>Option 2: 9</button>
-            <button>Option 3: 8</button>
-            <button>Option 4: 14</button>
+        <div id="answer-choices1">
+            <button onclick="checkAnswer(48)">Option 1: 48</button>
+            <button onclick="checkAnswer(14)">Option 2: 14</button>
+            <button onclick="checkAnswer(42)">Option 3: 42</button>
+            <button onclick="checkAnswer(24)">Option 4: 24</button>
         </div>
     </div>
+    
+    <div id="question-container2">
+        <div id="question2">
+            Question: What is the result of 5 + 7?
+        </div>
+        <div id="answer-choices2">
+            <button onclick="checkAnswer(12)">Option 1: 12</button>
+            <button onclick="checkAnswer(9)">Option 2: 9</button>
+            <button onclick="checkAnswer(8)">Option 3: 8</button>
+            <button onclick="checkAnswer(14)">Option 4: 14</button>
+        </div>
+    </div>
+
     <div id="timer-container">
         <!-- Timer display will be shown here -->
         <div id="timer">
