add some  change on css and html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
 
     <div id="timer-container">
-        <!-- Timer display will be shown here -->
+        <!-- Timer display -->
         <div id="timer">
             Time Left: 10 seconds
         </div>
