--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 
     <title>Math Jeopardy</title>
 </head>
-
+<div id="app">
+<div id="game-container">
+<div id="game-board"></div>
+<div id="question-container"><!-- Question and answer --></div>
+<div id="timer-container"><!--Timer display goes here --></div>
+<div id="score-container"><!-- Score display goes here --></div>
+</div>
+</div>
 <body>
     <div id="game-board">
-    <div id="game-board">
+    <div id="game-container">
         <div class="category">
             <h3>Math</h3>
             <ul>
