add some change on my html

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js">
+      <script src="assets/js/script.js"></script>
 
-    </script>
+    
 </body>
 
 </html>
