add score container and current player

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <div id="game-board">
     <div id="game-container">
         <div class="category">
@@ -23,9 +24,10 @@
                 <li><button data-points="250">300</button></li>
                 <li><button data-points="300">300</button></li>
             </ul>
-        </div>
+        </div></div>
     </div>
-    <div id="question-container1">
+    <div id="current-player"></div>
+    <div id="question container1">
         <div id="question1">
             Question: What is 8 multiplied by 6?
         </div>
@@ -48,7 +50,10 @@
             <button onclick="checkAnswer(14)">Option 4: 14</button>
         </div>
     </div>
-
+<div id="score container" >
+<div id='score'>
+</div>
+</div>
     <div id="timer-container">
         <!-- Timer display -->
         <div id="timer">
