add current players

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             </ul>
         </div></div>
     </div>
-    <div id="current-player"></div>
+    <div id="current-player">
+        player 1 and player 2
+    </div>
     <div id="question container1">
         <div id="question1">
             Question: What is 8 multiplied by 6?
