--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-
+<h1> MATH JEOPARDY</h1>
     <div id="game-board">
     <div id="game-container">
         <div class="category">
