--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p id="winner-message"></p>
             <button id="restart-button">Restart Game</button>
             <div id="winning-screen">
-                <h1>Congratulations, You Won!</h1>
+                <h1>Congratulations on Your Victory!</h1>
             </div>
         </div>
     </main>
