add more question and answers on css and html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
     <script src="assets/js/script.js" defer></script>
 </head>
 
@@ -20,6 +21,54 @@
         <div id="game-container">
             <h2>Arithmetic Questions</h2>
             <ul>
+                <li>
+                    <p>Question: What is 9 multiplied by 7?</p>
+                    <p>Answer: 63</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 12 divided by 4.</p>
+                    <p>Answer: 3</p>
+                </li>
+                <li>
+                    <p>Question: What is 12 plus 13?</p>
+                    <p>Answer: 25</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 23 from 30.</p>
+                    <p>Answer: 7</p>
+                </li>
+                <li>
+                    <p>Question: What is 5 multiplied by 7?</p>
+                    <p>Answer: 35</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 60 divided by 10.</p>
+                    <p>Answer: 6</p>
+                </li>
+                <li>
+                    <p>Question: What is 17 plus 13?</p>
+                    <p>Answer: 30</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 40 from 50.</p>
+                    <p>Answer: 10</p>
+                </li>
+                <li>
+                    <p>Question: What is 9 multiplied by 5?</p>
+                    <p>Answer: 45</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 20 divided by 4.</p>
+                    <p>Answer: 5</p>
+                </li>
+                <li>
+                    <p>Question: What is 15 plus 18?</p>
+                    <p>Answer: 33</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 42 from 60.</p>
+                    <p>Answer: 18</p>
+                </li>
                 <li>
                     <p>Question: What is 9 multiplied by 7?</p>
                     <p>Answer: 63</p>
