add more question and answers on html

--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
                     <p>Question: Subtract 42 from 60.</p>
                     <p>Answer: 18</p>
                 </li>
+                <li>
+                    <p>Question: What is 12 multiplied by 5?</p>
+                    <p>Answer: 60</p>
+                </li>
+                <li>
+                    <p>Question: Calculate 81 divided by 9.</p>
+                    <p>Answer: 9</p>
+                </li>
+                <li>
+                    <p>Question: What is 1 plus 4?</p>
+                    <p>Answer: 5</p>
+                </li>
+                <li>
+                    <p>Question: Subtract 12 from 33.</p>
+                    <p>Answer: 21</p>
+                </li>
             </ul>
         </div>
 
