add changed color

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       </div>
     </main>
     <section id="instructions">
-      <h2>Instructions</h2>
+     <b> <h2>Instructions</h2></b>
       <p>
         Welcome to the Math Jeopardy game! The purpose of this game is to assess
         and evaluate an individual's mathematical abilities through a sequence
