add change colors and changed html structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,35 @@
     <header>
       <h1>MATH JEOPARDY</h1>
     </header>
+    <div>
+      <section id="instructions">
+        <b>
+          <h2>Instructions</h2>
+        </b>
+        <p>
+          Welcome to the Math Jeopardy game! The purpose of this game is to
+          assess and evaluate an individual's mathematical abilities through a
+          sequence of arithmetic-based inquiries.
+        </p>
+        <p>How to Play:</p>
+        <ol>
+          <li>Players take turns answering mathematical questions.</li>
+          <li>Answer within the given time limit.</li>
+          <li>Correct answers earn you points.</li>
+          <li>The player with the most points wins!</li>
+        </ol>
 
+        <h2>Why Play Math Jeopardy?</h2>
+        <p>Playing Math Jeopardy is a fun way to:</p>
+        <ul>
+          <li>Improve your math skills</li>
+          <li>Challenge yourself and others</li>
+          <li>Learn while having a great time</li>
+        </ul>
+        <h2>so let's begin the competition.</h2>
+        >
+      </section>
+    </div>
     <main>
       <div id="game-container">
         <h2>Arithmetic Questions</h2>
@@ -118,28 +146,5 @@
         </div>
       </div>
     </main>
-    <section id="instructions">
-     <b> <h2>Instructions</h2></b>
-      <p>
-        Welcome to the Math Jeopardy game! The purpose of this game is to assess
-        and evaluate an individual's mathematical abilities through a sequence
-        of arithmetic-based inquiries.
-      </p>
-      <p>How to Play:</p>
-      <ol>
-        <li>Players take turns answering mathematical questions.</li>
-        <li>Answer within the given time limit.</li>
-        <li>Correct answers earn you points.</li>
-        <li>The player with the most points wins!</li>
-      </ol>
-
-      <h2>Why Play Math Jeopardy?</h2>
-      <p>Playing Math Jeopardy is a fun way to:</p>
-      <ul>
-        <li>Improve your math skills</li>
-        <li>Challenge yourself and others</li>
-        <li>Learn while having a great time</li>
-      </ul>
-    </section>
   </body>
 </html>
