dd creating js click event and modify html file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           <li>Challenge yourself and others</li>
           <li>Learn while having a great time</li>
         </ul>
-        <h2>so let's begin the competition.</h2>
+        <h2><a href="#game-container">Let's Start the Game</a></h2>
+
         >
       </section>
     </div>
@@ -133,7 +134,7 @@
           </li>
         </ul>
       </div>
-
+      <div id="game-container" style="display: none"></div>
       <div id="score-container">
         <div id="score"></div>
       </div>
@@ -146,5 +147,6 @@
         </div>
       </div>
     </main>
+    <script src="assets/js/script.js" defer></script>
   </body>
 </html>
