add change click event and strucure from html and color on css

--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
           <li>The player with the most points wins!</li>
         </ol>
 
-        <h2>Why Play Math Jeopardy?</h2>
-        <p>Playing Math Jeopardy is a fun way to:</p>
-        <ul>
+        <p id="benefits-heading">Playing Math Jeopardy is a fun way to:</p>
+        <ul id="benefits-list" style="display: none">
           <li>Improve your math skills</li>
           <li>Challenge yourself and others</li>
           <li>Learn while having a great time</li>
         </ul>
+        <p id="play-link">Click here to play Math Jeopardy</p>
         <h2><a href="#game-container">Let's Start the Game</a></h2>
-
-        >
       </section>
     </div>
     <main>
