add some change on js creipt

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
           assess and evaluate an individual's mathematical abilities through a
           sequence of arithmetic-based inquiries.
         </p>
-        <p>How to Play:</p>
-        <ol>
+
+        <p id="how-to-play-heading">How to Play:</p>
+        <ol id="instructions-list" style="display: none">
           <li>Players take turns answering mathematical questions.</li>
           <li>Answer within the given time limit.</li>
           <li>Correct answers earn you points.</li>
           <li>The player with the most points wins!</li>
         </ol>
+        <p id="play-link">Click here to see instructions</p>
 
         <p id="benefits-heading">Playing Math Jeopardy is a fun way to:</p>
         <ul id="benefits-list" style="display: none">
