add calculate the winner and changed some code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-
     <script src="assets/js/script.js" defer></script>
   </head>
 
@@ -18,123 +17,122 @@
     <header>
       <h1>MATH JEOPARDY</h1>
     </header>
-    <div>
+
+    <main>
       <section id="instructions">
-        <b>
-          <h2>Instructions</h2>
-        </b>
+        <h2>Instructions</h2>
         <p>
           Welcome to the Math Jeopardy game! The purpose of this game is to
           assess and evaluate an individual's mathematical abilities through a
           sequence of arithmetic-based inquiries.
         </p>
-
         <p id="how-to-play-heading">How to Play:</p>
-        <ol id="instructions-list" style="display: none">
+        <ol id="instructions-list">
           <li>Players take turns answering mathematical questions.</li>
           <li>Answer within the given time limit.</li>
           <li>Correct answers earn you points.</li>
           <li>The player with the most points wins!</li>
         </ol>
-        <p id="play-link">Click here to see instructions</p>
-
         <p id="benefits-heading">Playing Math Jeopardy is a fun way to:</p>
-        <ul id="benefits-list" style="display: none">
+        <ul id="benefits-list">
           <li>Improve your math skills</li>
           <li>Challenge yourself and others</li>
           <li>Learn while having a great time</li>
         </ul>
-        <p id="play-link">Click here to play Math Jeopardy</p>
+        <p id="play-link" class="clickable">Click here to play Math Jeopardy</p>
         <h2><a href="#game-container">Let's Start the Game</a></h2>
       </section>
-    </div>
-    <main>
-      <div id="game-container">
-        <h2>Arithmetic Questions</h2>
-        <ul>
-          <li>
-            <p>Question: What is 9 multiplied by 7?</p>
-            <p>Answer: 63</p>
-          </li>
-          <li>
-            <p>Question: Calculate 12 divided by 4.</p>
-            <p>Answer: 3</p>
-          </li>
-          <li>
-            <p>Question: What is 12 plus 13?</p>
-            <p>Answer: 25</p>
-          </li>
-          <li>
-            <p>Question: Subtract 23 from 30.</p>
-            <p>Answer: 7</p>
-          </li>
-          <li>
-            <p>Question: What is 5 multiplied by 7?</p>
-            <p>Answer: 35</p>
-          </li>
-          <li>
-            <p>Question: Calculate 60 divided by 10.</p>
-            <p>Answer: 6</p>
-          </li>
-          <li>
-            <p>Question: What is 17 plus 13?</p>
-            <p>Answer: 30</p>
-          </li>
-          <li>
-            <p>Question: Subtract 40 from 50.</p>
-            <p>Answer: 10</p>
-          </li>
-          <li>
-            <p>Question: What is 9 multiplied by 7?</p>
-            <p>Answer: 63</p>
-          </li>
-          <li>
-            <p>Question: Calculate 84 divided by 12.</p>
-            <p>Answer: 7</p>
-          </li>
-          <li>
-            <p>Question: What is 13 plus 34?</p>
-            <p>Answer: 47</p>
-          </li>
-          <li>
-            <p>Question: Subtract 42 from 65.</p>
-            <p>Answer: 23</p>
-          </li>
-          <li>
-            <p>Question: What is 9 multiplied by 7?</p>
-            <p>Answer: 63</p>
-          </li>
-          <li>
-            <p>Question: Calculate 12 divided by 4.</p>
-            <p>Answer: 3</p>
-          </li>
-          <li>
-            <p>Question: What is 15 plus 18?</p>
-            <p>Answer: 33</p>
-          </li>
-          <li>
-            <p>Question: Subtract 42 from 60.</p>
-            <p>Answer: 18</p>
-          </li>
-          <li>
-            <p>Question: What is 12 multiplied by 5?</p>
-            <p>Answer: 60</p>
-          </li>
-          <li>
-            <p>Question: Calculate 81 divided by 9.</p>
-            <p>Answer: 9</p>
-          </li>
-          <li>
-            <p>Question: What is 1 plus 4?</p>
-            <p>Answer: 5</p>
-          </li>
-          <li>
-            <p>Question: Subtract 12 from 33.</p>
-            <p>Answer: 21</p>
-          </li>
-        </ul>
+
+      <div id="game-container" style="display: none">
+        <div id="game-container" style="display: none">
+          <div id="game-container">
+            <h2>Arithmetic Questions</h2>
+            <ul>
+              <li>
+                <p>Question: What is 9 multiplied by 7?</p>
+                <p>Answer: 63</p>
+              </li>
+              <li>
+                <p>Question: Calculate 12 divided by 4.</p>
+                <p>Answer: 3</p>
+              </li>
+              <li>
+                <p>Question: What is 12 plus 13?</p>
+                <p>Answer: 25</p>
+              </li>
+              <li>
+                <p>Question: Subtract 23 from 30.</p>
+                <p>Answer: 7</p>
+              </li>
+              <li>
+                <p>Question: What is 5 multiplied by 7?</p>
+                <p>Answer: 35</p>
+              </li>
+              <li>
+                <p>Question: Calculate 60 divided by 10.</p>
+                <p>Answer: 6</p>
+              </li>
+              <li>
+                <p>Question: What is 17 plus 13?</p>
+                <p>Answer: 30</p>
+              </li>
+              <li>
+                <p>Question: Subtract 40 from 50.</p>
+                <p>Answer: 10</p>
+              </li>
+              <li>
+                <p>Question: What is 9 multiplied by 7?</p>
+                <p>Answer: 63</p>
+              </li>
+              <li>
+                <p>Question: Calculate 84 divided by 12.</p>
+                <p>Answer: 7</p>
+              </li>
+              <li>
+                <p>Question: What is 13 plus 34?</p>
+                <p>Answer: 47</p>
+              </li>
+              <li>
+                <p>Question: Subtract 42 from 65.</p>
+                <p>Answer: 23</p>
+              </li>
+              <li>
+                <p>Question: What is 9 multiplied by 7?</p>
+                <p>Answer: 63</p>
+              </li>
+              <li>
+                <p>Question: Calculate 12 divided by 4.</p>
+                <p>Answer: 3</p>
+              </li>
+              <li>
+                <p>Question: What is 15 plus 18?</p>
+                <p>Answer: 33</p>
+              </li>
+              <li>
+                <p>Question: Subtract 42 from 60.</p>
+                <p>Answer: 18</p>
+              </li>
+              <li>
+                <p>Question: What is 12 multiplied by 5?</p>
+                <p>Answer: 60</p>
+              </li>
+              <li>
+                <p>Question: Calculate 81 divided by 9.</p>
+                <p>Answer: 9</p>
+              </li>
+              <li>
+                <p>Question: What is 1 plus 4?</p>
+                <p>Answer: 5</p>
+              </li>
+              <li>
+                <p>Question: Subtract 12 from 33.</p>
+                <p>Answer: 21</p>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div id="game-container" style="display: none"></div>
+
       <div id="score-container">
         <div id="score"></div>
       </div>
@@ -147,6 +145,5 @@
         </div>
       </div>
     </main>
-    <script src="assets/js/script.js" defer></script>
   </body>
 </html>
