add initial hidden on html

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
           assess and evaluate an individual's mathematical abilities through a
           sequence of arithmetic-based inquiries.
         </p>
-        <p id="how-to-play-heading">How to Play:</p>
-        <ol id="instructions-list">
+        
+<p id="how-to-play-heading" class="clickable">How to Play:</p> 
+<ol id="instructions-list" style="display: none;">
           <li>Players take turns answering mathematical questions.</li>
           <li>Answer within the given time limit.</li>
           <li>Correct answers earn you points.</li>
